BIG-24387: Correcting the padding on small select boxes. Increases padding on the right for the background arrow to fit

--- a/assets/scss/components/citadel/forms/_forms.scss
+++ b/assets/scss/components/citadel/forms/_forms.scss
@@ -149,7 +149,7 @@
     height: $input-small-height;
     line-height: 1rem;
     max-width: 20rem;
-    padding: $input-small-padding;
+    padding: (spacing("quarter") + spacing("eighth")) (spacing("base") * 2) (spacing("quarter") + spacing("eighth")) (spacing("third") + spacing("sixth"));
 }
 
 .form-select--short {
